# hs-scripts

./: LICENSE  README  README.md  Script.hs  hs-scripts.cabal  hs.bat  hs.sh
scripts/: Script.hs  SimpleHTTPServer.hs
