name:          hs-scripts
version:       0.0.0.0
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
build-type:    Simple
cabal-version: >= 1.10
-- Synopsis:      
-- Description:   

Extra-Source-Files:
    README.md
    CHANGELOG
    LICENSE

library
    -- http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with
    hs-source-dirs: library
    default-language: Haskell2010
    ghc-options: -Wall 
    build-depends:
        base >= 4.7 && < 5,
        transformers >= 0.4.3.0 && < 0.5,
        mtl,
        bifunctors >= 4.1 && < 5,
        containers >= 0.4,
        unordered-containers >= 0.2.5.0,
        async,
        conceit >= 0.2.2.1,
        attoparsec >= 0.12.1.0,
        aeson >= 0.8.0.2,
        lens-aeson,
        aeson-pretty >= 0.7.2,
        comonad >= 4.2.2,
        free,
        lens >= 4.7,
        bytestring >= 0.10.4.0,
        text >= 0.11.2 && < 1.2.1,
        diagrams-core >= 1.3 && < 1.4,
        diagrams-lib >= 1.3 && < 1.4,
        diagrams-contrib >= 1.3 && < 1.4,
        diagrams-svg >= 1.3 && < 1.4,
        scotty >= 0.9.1,
        wai-extra,
        http-types,
        network,
        lucid >= 2.9.2,
        optparse-applicative,
        exceptions,
        monad-control,
        enclosed-exceptions >= 1.0.1,
        pipes,
        pipes-text,
        pipes-bytestring,
        pipes-group,
        pipes-concurrency,
        pipes-parse,
        pipes-attoparsec,
        pipes-aeson,
        foldl,
        turtle,
        resourcet,
        conduit,
        xml-conduit,
        xml-lens,
        directory,
        filepath
        
    exposed-modules:
        Scripting
    exposed: True
    buildable: True
    other-modules:
    ghc-options: -Wall

Source-repository head
    type:     git
    location: https://github.com/danidiaz/hs-scripts.git
