name:          hs-scripts
version:       0.0.0.0
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
build-type:    Simple
cabal-version: >= 1.10
-- Synopsis:      
-- Description:   

Extra-Source-Files:
    README.md
    CHANGELOG
    LICENSE

library
    -- http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with
    hs-source-dirs: library
    default-language: Haskell2010
    ghc-options: -Wall 
    build-depends:
        base >= 4.7 && < 5,
        transformers >= 0.4.3.0 && < 0.5,
        mtl,
        bifunctors >= 4.1 && < 5,
        semigroups >= 0.16.2.2,
        containers >= 0.4,
        unordered-containers >= 0.2.5.0,
        async >= 2.0.2,
        conceit >= 0.3.1,
        attoparsec >= 0.12.1.0,
        aeson >= 0.8.0.2,
        lens-aeson,
        aeson-pretty >= 0.7.2,
        cassava,
        comonad >= 4.2.2,
        free >= 4.10,
        lens >= 4.9.1,
        bytestring >= 0.10.4.0,
        text >= 0.11.2 && < 1.2.1,
        wai-extra,
        wai-app-static >= 3.1.0,
        network,
        http-types,
        scotty >= 0.9.1,
        diagrams-core >= 1.3 && < 1.4,
        diagrams-lib >= 1.3 && < 1.4,
        diagrams-contrib >= 1.3 && < 1.4,
        diagrams-svg >= 1.3 && < 1.4,
        lucid >= 2.9.2,
        exceptions,
        enclosed-exceptions >= 1.0.1,
        monad-control,
        lifted-base,
        lifted-async,
        pipes >= 4.1.5,
        pipes-text,
        pipes-bytestring,
        pipes-group,
        pipes-concurrency,
        pipes-parse,
        pipes-attoparsec,
        pipes-aeson,
        pipes-csv,
        foldl >= 1.0.10,
        turtle,
        resourcet,
        conduit >= 1.2.4.1,
        xml-conduit,
        xml-lens,
        directory >= 1.2.2.1,
        filepath >= 1.4.0.0,
        temporary >= 1.2.0.3,
        process >=  1.2.3.0,
        process-streaming >= 0.7.2.1,
        vector >= 0.10.12,
        time >= 1.5,
        reflection >= 1.5.2.1,
        vinyl >= 0.5.1, 
        optparse-applicative
        
    exposed-modules:
        Scripting
    exposed: True
    buildable: True
    other-modules:
    ghc-options: -Wall

Source-repository head
    type:     git
    location: https://github.com/danidiaz/hs-scripts.git
